--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -38,25 +38,26 @@
                         android:layout_marginTop="@dimen/dimen_8dp"
                         android:layout_marginEnd="8dp"
                         android:fontFamily="@font/pacifico"
+                        android:paddingEnd="@dimen/dimen_16dp"
                         android:text="@string/app_name"
                         android:textColor="@color/white_ffffff"
                         android:textSize="@dimen/dimen_24sp"
-                        app:layout_constraintEnd_toStartOf="@+id/imageView"
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
-                        android:id="@+id/imageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/dimen_16dp"
-                        app:layout_constraintBottom_toBottomOf="@+id/title"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/title"
-                        app:srcCompat="@drawable/ic_favorite" />
+                <!-- <ImageView
+                         android:id="@+id/imageView"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_marginEnd="@dimen/dimen_16dp"
+                         app:layout_constraintBottom_toBottomOf="@+id/title"
+                         app:layout_constraintEnd_toEndOf="parent"
+                         app:layout_constraintTop_toTopOf="@+id/title"
+                         app:srcCompat="@drawable/ic_favorite" />-->
 
                 <EditText
+                        android:id="@+id/editSearch"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/dimen_16dp"
@@ -64,6 +65,9 @@
                         android:drawableStart="@drawable/ic_search"
                         android:fontFamily="@font/sf_ui_text_regular"
                         android:hint="Search jobs"
+                        android:imeOptions="actionSearch"
+                        android:inputType="textAutoComplete"
+                        android:maxLines="1"
                         android:padding="8dp"
                         android:textColor="@color/gray_757575"
                         android:textColorHint="@color/gray_ababab"
