--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -104,28 +104,37 @@
                 app:layout_constraintTop_toBottomOf="@+id/textViewCompany"
                 app:layout_constraintVertical_bias="0.0">
 
-            <com.pchmn.materialchips.ChipView
+            <Button
                     android:id="@+id/tag1"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:layout_marginTop="@dimen/dimen_4dp"
                     android:layout_marginEnd="@dimen/dimen_4dp"
-                    app:backgroundColor="@color/colorPrimaryDark"
-                    app:labelColor="@android:color/white"
+                    android:background="@drawable/background_button_rounded_gray"
+                    android:fontFamily="@font/sf_ui_text_light"
+                    android:paddingStart="@dimen/dimen_8dp"
+                    android:paddingEnd="@dimen/dimen_8dp"
+                    android:textColor="@color/white_ffffff"
+                    android:textSize="14sp"
+                    android:textAllCaps="false"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />
 
-            <com.pchmn.materialchips.ChipView
+            <Button
                     android:id="@+id/tag2"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:layout_marginTop="@dimen/dimen_4dp"
                     android:layout_marginEnd="@dimen/dimen_4dp"
-                    app:backgroundColor="@color/colorPrimaryDark"
-                    app:deleteIconColor="@android:color/white"
-                    app:labelColor="@android:color/white"
+                    android:background="@drawable/background_button_rounded_gray"
+                    android:fontFamily="@font/sf_ui_text_light"
+                    android:paddingStart="@dimen/dimen_8dp"
+                    android:textAllCaps="false"
+                    android:paddingEnd="@dimen/dimen_8dp"
+                    android:textColor="@color/white_ffffff"
+                    android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
