--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4C62FE</color>
-    <color name="colorPrimaryDark">#4C62FE</color>
-    <color name="colorAccent">#4C62FE</color>
+    <color name="colorPrimary">#0b295b</color>
+    <color name="colorPrimaryDark">#0b295b</color>
+    <color name="colorAccent">#0b295b</color>
     <color name="colorPrimaryText">#1C1C1C</color>
     <color name="green_175258">#175258</color>
     <color name="green_2bbc9b">#2BBC9B</color>
@@ -18,4 +18,5 @@
     <color name="gray_757575">#757575</color>
     <color name="gray_4E4B70">#CC4E4B70</color>
     <color name="gray_252220">#252220</color>
+    <color name="gray_0b295b">#0b295b</color>
 </resources>
